--- a/MarylaWozniak9.1.ipynb
+++ b/MarylaWozniak9.1.ipynb
@@ -11,13 +11,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter non negative number: y\n",
-      "Enter  number only: r\n",
-      "Enter  number only: r\n",
-      "Enter  number only: -6\n",
-      "Enter  number only: -6\n",
-      "Enter  number only: 5\n",
-      "number is prime\n"
+      "Enter non negative number: -5\n",
+      "Enter  number only: y\n",
+      "Enter  number only: -7\n",
+      "Enter  number only: 78\n",
+      "number is not a prime number.\n"
      ]
     }
    ],
@@ -28,12 +26,13 @@
     "#version with while loop\n",
     "\n",
     "number=input(\"Enter non negative number: \")\n",
+    "# isnumeric method is preventing user from entering characters and negative numbers...\n",
     "while not number.isnumeric():\n",
     "    number=input(\"Enter  number only: \")\n",
     "    \n",
     "number=int(number)\n",
-    "while number <=0:\n",
-    "    number=int(input(\"Enter non negative number only: \"))\n",
+    "#while number <=0: \n",
+    "  #  number=int(input(\"Enter non negative number only: \"))\n",
     "    \n",
     "num=2\n",
     "result=1    \n",
@@ -81,15 +80,15 @@
     "    number=input(\"Enter  number only: \")\n",
     "    \n",
     "number=int(number)\n",
-    "while number <=0:\n",
-    "    number=int(input(\"Enter non negative number only: \"))\n",
-    "while number <=0:\n",
-    "    number=int(input(\"Enter non negative number only: \"))\n",
+    "#while number <=0:\n",
+    "   # number=int(input(\"Enter non negative number only: \"))\n",
+    "\n",
     "    \n",
     "found=False   \n",
     "num=2\n",
     "result=None\n",
-    "#still working on how to handle numbers like 3,2 and 1\n",
+    "\n",
+    "#a way to handle numbers like 3,2 and 1\n",
     "if number==1 or number==2 or number==3:\n",
     "    print(number, \" is a prime number!!!.\")\n",
     "\n",
